Fixed navbar overlapping issue

--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,8 @@ header {
     position: sticky;
     top: 0;
     height: 8svh;
+    /* Keeps nav bar from clashing with rest of elements */
+    z-index: 1000;
 }
 header > * {
     box-shadow: 0 0 0 1px var(--gridlines);
